# carv

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.opencode/: config.json  opencode.json
.opencode/agents/: rust-expert.md
.opencode/config/: agent-metadata.json
.opencode/subagents/: rust-architect.md  rust-coder.md  rust-reviewer.md  rust-scout.md  rust-tester.md
docs/designs/: 2026-04-25-carv-design.md
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/hashing/: anchors.rs  mod.rs  state.rs  words.txt
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs  retry.rs  types.rs
src/lsp/: mod.rs
src/stream/: mod.rs  output.rs
src/tools/: fs.rs  mod.rs  registry.rs  traits.rs
src/treesitter/: mod.rs
