[package]
name = "carv"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust Coding Agent with Tree-sitter + LSP"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "time", "fs", "sync"] }
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"

# Tree-sitter dependencies deferred until version compatibility resolved (issue #4).
# tree-sitter = "0.24"
# tree-sitter-rust = "0.24"
# tree-sitter-python = "0.24"
# tree-sitter-typescript = "0.24"

[build-dependencies]
# cc = "1"  # Deferred with tree-sitter; only needed for C grammar compilation.
